Added CATALINA_PID to setenv.sh

--- a/templates/tomcat_systemd.conf
+++ b/templates/tomcat_systemd.conf
@@ -5,18 +5,14 @@ After=network.target
 [Service]
 Type=simple
 
-Environment=JAVA_HOME={{tomcat_java_home}}
-Environment=CATALINA_HOME={{tomcat_root}}
-Environment=JAVA_OPTS="{{tomcat_java_opts}}"
-Environment=CATALINA_OPTS="{{tomcat_catalina_opts}}"
+WorkingDirectory={{tomcat_root_symlink}}
+ExecStart={{tomcat_root_symlink}}/bin/catalina.sh run
 
-WorkingDirectory={{tomcat_root}}
-ExecStart={{tomcat_root}}/bin/catalina.sh run
-
-ExecStopPost=/bin/rm -rf {{tomcat_root}}/temp/*
+ExecStopPost=/bin/rm -rf {{tomcat_root_symlink}}/temp/*
 
 User={{tomcat_user}}
 Group={{tomcat_group}}
+UMask=0007
 RestartSec=10
 Restart=always
 
