--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -39,6 +39,12 @@ tomcat_memory_args: "-Xms512M -Xmx1024M"
 tomcat_java_opts: "-Djava.awt.headless=true '-Duser.timezone={{tomcat_timezone}}'"
 tomcat_catalina_opts: "{{tomcat_memory_args}} {{ '-Djava.security.egd=file:/dev/../dev/urandom' if tomcat_urandom else '' }} -server -XX:+UseParallelGC"
 
+tomcat_manage_server_xml: yes
+tomcat_port_offset: 0
+tomcat_http_port: "{{8080 + tomcat_port_offset|int}}"
+tomcat_shutdown_port: "{{8005 + tomcat_port_offset|int}}"
+tomcat_ajp_port: "{{8009 + tomcat_port_offset|int}}"
+
 tomcat_remove_delivered_apps: yes
 tomcat_delivered_apps:
   - docs
