--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -73,6 +73,9 @@
 - include_tasks: server_xml.yml
   when: tomcat_manage_server_xml
 
+- include_tasks: logging.yml
+  when: tomcat_manage_logging
+
 # - name: Create Upstart Service
 #   template:
 #     src: tomcat_upstart.conf
