--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -40,6 +40,8 @@ tomcat_java_opts: "-Djava.awt.headless=true '-Duser.timezone={{tomcat_timezone}}
 tomcat_catalina_opts: "{{tomcat_memory_args}} {{ '-Djava.security.egd=file:/dev/../dev/urandom' if tomcat_urandom else '' }} -server -XX:+UseParallelGC"
 
 tomcat_manage_server_xml: yes
+tomcat_manage_context_xml: yes
+tomcat_manage_tomcat_users_xml: yes
 tomcat_port_offset: 0
 tomcat_http_port: "{{8080 + tomcat_port_offset|int}}"
 tomcat_shutdown_port: "{{8005 + tomcat_port_offset|int}}"
@@ -55,4 +57,7 @@ tomcat_delivered_apps:
   - host-manager
   - ROOT
 
+tomcat_resources: []
+tomcat_resource_links: []
+tomcat_users: []
 tomcat_add_jars: []
