--- a/tests/test.yml
+++ b/tests/test.yml
@@ -18,6 +18,8 @@
         name: java-1.8.0-openjdk
 
   roles:
+    - name: about
+
     - name: tomcat
       tomcat_service_name: tomcat_a
       tomcat_resources:
