--- a/tasks/server_xml.yml
+++ b/tasks/server_xml.yml
@@ -4,7 +4,7 @@
     path: "{{ tomcat_root }}/conf/server.xml"
     xpath: /Server
     attribute: port
-    value: "{{ tomcat_shutdown_port }}"
+    value: "{{ tomcat_shutdown_port|string }}"
     backup: yes
 
 - name: Set HTTP port
@@ -12,7 +12,7 @@
     path: "{{ tomcat_root }}/conf/server.xml"
     xpath: /Server/Service/Connector[starts-with(@protocol,'HTTP/')]
     attribute: port
-    value: "{{ tomcat_http_port }}"
+    value: "{{ tomcat_http_port|string }}"
     backup: yes
 
 - name: Set AJP port
@@ -20,7 +20,7 @@
     path: "{{ tomcat_root }}/conf/server.xml"
     xpath: /Server/Service/Connector[starts-with(@protocol,'AJP/')]
     attribute: port
-    value: "{{ tomcat_ajp_port }}"
+    value: "{{ tomcat_ajp_port|string }}"
     backup: yes
 
 - name: Add Tomcat resources
