--- a/tasks/preinstall.yml
+++ b/tasks/preinstall.yml
@@ -1,5 +1,7 @@
 ---
 - include_tasks: detect_timezone.yml
   when: current_timezone is not defined
+  tags: always
 
 - include_tasks: "preinstall_{{ ansible_pkg_mgr }}.yml"
+  tags: always
