--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -63,21 +63,20 @@
     - temp
     - work
 
+- include_tasks: self_signed.yml
+  when: tomcat_self_signed
+
 - include_tasks: server_xml.yml
   when: tomcat_manage_server_xml
-  tags: always
 
 - include_tasks: context_xml.yml
   when: tomcat_manage_context_xml
-  tags: always
 
 - include_tasks: tomcat_users_xml.yml
   when: tomcat_manage_tomcat_users_xml
-  tags: always
 
 - include_tasks: logging.yml
   when: tomcat_manage_logging
-  tags: always
 
 - name: Add jars to Tomcat
   copy:
