--- a/tests/Vagrantfile
+++ b/tests/Vagrantfile
@@ -13,6 +13,7 @@ Vagrant.configure(2) do |config|
   end
 
   config.vm.network "forwarded_port", guest: 8080, host: 8080
+  config.vm.network "forwarded_port", guest: 8443, host: 8443
   config.vm.network "forwarded_port", guest: 9080, host: 9080
   config.vm.synced_folder "artifacts", "/mnt/artifacts"
 
