--- a/tests/test.yml
+++ b/tests/test.yml
@@ -22,6 +22,7 @@
 
     - name: tomcat
       tomcat_service_name: tomcat_a
+      tomcat_self_signed: yes
       tomcat_resources:
         - name: someResource
           attrs:
