--- a/tasks/self_signed.yml
+++ b/tasks/self_signed.yml
@@ -1,27 +1,10 @@
 ---
-- name: Install packages for pip (required to generate certificate)
-  yum:
-    name:
-      - python-setuptools
-      - python-devel
-      - gcc
-  tags: debug
-
-- name: Install Pip
-  easy_install: name=pip
-  tags: debug
-
-- name: Install PyOpenSSL
-  pip: name=pyOpenSSL
-  tags: debug
-
 - name: Set facts for self-signed cert
   set_fact:
     tomcat_ssl_enabled: yes
     tomcat_ssl_cert_attrs:
       certificateKeyFile: "conf/self-signed-key.pem"
       certificateFile: "conf/self-signed-cert.pem"
-  tags: debug
 
 - name: Generate an OpenSSL private key
   openssl_privatekey:
@@ -29,22 +12,44 @@
     owner: root
     group: "{{ tomcat_group }}"
     mode: "0640"
-  tags: debug
 
-- name: Generate an OpenSSL CSR
-  openssl_csr:
-    path: "{{ tomcat_root }}/conf/self-signed.csr"
-    privatekey_path: "{{ tomcat_root }}/conf/self-signed-key.pem"
-    common_name: "{{ ansible_hostname }}"
-  tags: debug
+#
+# This does not work on RHEL 7 because of:
+#   https://github.com/ansible/ansible/issues/34054
+#
+# Should be resolved by:
+#   https://github.com/ansible/ansible/issues/34054
+#
+# - name: Generate an OpenSSL CSR
+#   openssl_csr:
+#     path: "{{ tomcat_root }}/conf/self-signed.csr"
+#     privatekey_path: "{{ tomcat_root }}/conf/self-signed-key.pem"
+#     common_name: "{{ ansible_hostname }}"
+#
+# - name: Generate a self-signed OpenSSL certificate
+#   openssl_certificate:
+#     path: "{{ tomcat_root }}/conf/self-signed-cert.pem"
+#     privatekey_path: "{{ tomcat_root }}/conf/self-signed-key.pem"
+#     csr_path: "{{ tomcat_root }}/conf/self-signed.csr"
+#     provider: selfsigned
+#     owner: root
+#     group: "{{ tomcat_group }}"
+#     mode: "0644"
 
-- name: Generate a self-signed OpenSSL certificate
-  openssl_certificate:
-    path: "{{ tomcat_root }}/conf/self-signed-cert.pem"
-    privatekey_path: "{{ tomcat_root }}/conf/self-signed-key.pem"
-    csr_path: "{{ tomcat_root }}/conf/self-signed.csr"
-    provider: selfsigned
-    owner: root
-    group: "{{ tomcat_group }}"
-    mode: "0644"
-  tags: debug
+#
+# Workaround:
+#
+- name: Generate an OpenSSL CSR configuration
+  template:
+    src: csr_conf.j2
+    dest: "{{ tomcat_root }}/conf/self-signed.cnf"
+
+- name: Generate a CSR
+  command: "openssl req -key {{ tomcat_root }}/conf/self-signed-key.pem -new -out {{ tomcat_root }}/conf/self-signed.csr -config {{ tomcat_root }}/conf/self-signed.cnf"
+  args:
+    creates: "{{ tomcat_root }}/conf/self-signed.csr"
+
+- name: Generate a self-signed certificate
+  command: "openssl x509 -signkey {{ tomcat_root }}/conf/self-signed-key.pem -in {{ tomcat_root }}/conf/self-signed.csr -req -days 9999 -out {{ tomcat_root }}/conf/self-signed-cert.pem"
+  args:
+    creates: "{{ tomcat_root }}/conf/self-signed-cert.pem"
