Added tomcat_conf tag

--- a/tasks/context_xml.yml
+++ b/tasks/context_xml.yml
@@ -5,3 +5,4 @@
     name: "{{ item.name }}"
     global_name: "{{ item.global_name }}"
   with_items: "{{ tomcat_resource_links }}"
+  tags: tomcat_conf
