--- a/tasks/logging.yml
+++ b/tasks/logging.yml
@@ -5,6 +5,7 @@
     grep '^handlers\s*=' {{ tomcat_root }}/conf/logging.properties |cut -d '=' -f 2 |sed -e 's/,\s*/\n/g' |sed -e 's/ *//g' |grep juli.AsyncFileHandler
   register: handler_res
   changed_when: no
+  tags: tomcat_conf
 
 - name: Set log retention period for Tomcat
   lineinfile:
@@ -13,3 +14,4 @@
     line: "{{ item }}.maxDays = {{ tomcat_log_retain_days }}"
     backup: yes
   with_items: "{{ handler_res.stdout_lines }}"
+  tags: tomcat_conf
