--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -68,15 +68,19 @@
 
 - include_tasks: server_xml.yml
   when: tomcat_manage_server_xml
+  tags: tomcat_conf
 
 - include_tasks: context_xml.yml
   when: tomcat_manage_context_xml
+  tags: tomcat_conf
 
 - include_tasks: tomcat_users_xml.yml
   when: tomcat_manage_tomcat_users_xml
+  tags: tomcat_conf
 
 - include_tasks: logging.yml
   when: tomcat_manage_logging
+  tags: tomcat_conf
 
 - name: Add jars to Tomcat
   copy:
