--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -52,6 +52,7 @@ tomcat_port_offset: 0
 tomcat_http_port: "{{8080 + tomcat_port_offset|int}}"
 tomcat_https_port: "{{8443 + tomcat_port_offset|int}}"
 tomcat_shutdown_port: "{{8005 + tomcat_port_offset|int}}"
+tomcat_ajp_enabled: no
 tomcat_ajp_port: "{{8009 + tomcat_port_offset|int}}"
 
 tomcat_manage_logging: yes
