--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -49,6 +49,7 @@
     src: setenv.sh
     dest: "{{ tomcat_root }}/bin"
     mode: "0755"
+  tags: tomcat_conf
 
 - name: Set permissions for Tomcat directories
   file:
@@ -65,6 +66,7 @@
 
 - include_tasks: self_signed.yml
   when: tomcat_self_signed
+  tags: always
 
 - include_tasks: server_xml.yml
   when: tomcat_manage_server_xml
