--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -44,6 +44,7 @@ tomcat_ssl_enabled: no
 tomcat_ssl_protocol: org.apache.coyote.http11.Http11NioProtocol
 tomcat_ssl_max_threads: 150
 
+tomcat_censor_ansible_output: yes
 tomcat_manage_server_xml: yes
 tomcat_x_forwarded_enable: yes
 tomcat_server_xml_path: "{{ tomcat_root }}/conf/server.xml"
