--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,7 +3,7 @@ allow_duplicates: yes
 
 galaxy_info:
   author: Dan Boitnott
-  description: Installs a Tomcat instance
+  description: Installs and configures a Tomcat instance
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -27,6 +27,7 @@ galaxy_info:
   - name: EL
     versions:
       - 7
+      - 8
 
   galaxy_tags: []
     # List tags for your role here, one per line. A tag is a keyword that describes
