--- a/templates/tomcat_systemd.conf
+++ b/templates/tomcat_systemd.conf
@@ -1,17 +1,17 @@
 [Unit]
-Description=Tomcat Server ({{tomcat_service_name}})
+Description=Tomcat Server ({{ tomcat_service_name }})
 After=network.target
 
 [Service]
 Type=simple
 
-WorkingDirectory={{tomcat_root_symlink}}
-ExecStart={{tomcat_root_symlink}}/bin/catalina.sh run
+WorkingDirectory={{ tomcat_working_dir }}
+ExecStart={{ tomcat_root_symlink }}/bin/catalina.sh run
 
-ExecStopPost=/bin/rm -rf {{tomcat_root_symlink}}/temp/*
+ExecStopPost=/bin/rm -rf {{ tomcat_root_symlink }}/temp/*
 
-User={{tomcat_user}}
-Group={{tomcat_group}}
+User={{ tomcat_user }}
+Group={{ tomcat_group }}
 UMask=0007
 RestartSec=10
 Restart=always
