Fixes for Python3 compatibility

--- a/tasks/preinstall.yml
+++ b/tasks/preinstall.yml
@@ -2,4 +2,7 @@
 - include_tasks: detect_timezone.yml
   when: current_timezone is not defined
 
-- include_tasks: "preinstall_{{ ansible_pkg_mgr }}.yml"
+- name: Install required packages
+  package:
+    name:
+      - unzip
